crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__single__range.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Ok(
    (
        "",
        DateRule {
            kinds: [
                DateKind {
                    range: (
                        Date(
                            1,
                        ),
                        Date(
                            31,
                        ),
                    ),
                    periodic: DatePeriodic(
                        1,
                    ),
                },
            ],
        },
    ),
)
