crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__single__range_periodic_reverse.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Ok(
    (
        "",
        DateRule {
            kinds: [
                DateKind {
                    range: (
                        Date(
                            31,
                        ),
                        Date(
                            1,
                        ),
                    ),
                    periodic: DatePeriodic(
                        2,
                    ),
                },
            ],
        },
    ),
)
