crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__date__single__specifier_12.snap
---
source: crates/tools/cron/src/tests/unit/date.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Invalid(
                    "",
                    '-',
                ),
                Nom(
                    "12",
                    Alt,
                ),
            ],
        },
    ),
)
